* 2013-11-26 - marcus.klein@open-xchange.com

 - Fix for bug 29734: Marked paths.perfMap not as configuration file anymore.

* 2013-11-26 - tobias.friedrich@open-xchange.com

 - Fix for bug 30003: Introduced 'pushToken' parameter for drive requests to associate the registration token in generated events 
 - Fix for bug 29949: Extend the sizes of the 'fname' column in the 'oxfolder_tree' and the 'name' column in the 'virtualTree' table 

* 2013-11-26 - thorben.betten@open-xchange.com

 - Fix for bug 29914: Cleansed all duplicate log4j occurrences from runtime system
 - Fix for bug 30027: Trim date values prior to passing to iCal parser

* 2013-11-25 - steffen.templin@open-xchange.com

 - Fix for Bug 29967: Use proper credentials when accessing an external transport account

* 2013-11-24 - thorben.betten@open-xchange.com

 - Fix for bug 29823: Delegate acquiring stream from part to thread pool if possible
 - Fix for bug 29846: Enforce serial execution of modifying actions related to database entities/modules

* 2013-11-22 - thorben.betten@open-xchange.com

 - Fix for bug 29854: orderly signal OAuth provider error to client
 - Fix for bug 29860: Tolerate non-deletable file from file storage on user delete attempt
 - Fix for bug 29925: Propagate proper event in case auto-login is turned off and short-term session container elapsed

* 2013-11-22 - tobias.friedrich@open-xchange.com

 - Fix for bug 29904: Validate numerical identifiers for infostore file metadata 

* 2013-11-21 - thorben.betten@open-xchange.com

 - Fix for bug 29816: Handle possible 'javax.net.ssl.SSLHandshakeException' that indicates SMTP cannot be accessed with a secure connection.
                      Return an appropriate error message to the user and beg him to change SMTP configuration accordingly.
 - Fix for bug 29071: Properly query preview/resource cache when accessing published images

* 2013-11-21 - marcus.klein@open-xchange.com
