@@ -1,6 +1,7 @@
 * 2013-11-26 - marcus.klein@open-xchange.com
 
  - Fix for bug 29734: Marked paths.perfMap not as configuration file anymore.
+ - Fix for bug 29981: Be resilient against concurrent reads and modifications.
 
 * 2013-11-26 - tobias.friedrich@open-xchange.com
 
